fix carousel & simplify logic

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,9 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="logox100.png" />
     <link rel="apple-touch-icon" href="logox100.png" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,7 +21,47 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Basile Vanhaverbeke</title>
+
+    <!-------------BALISES META POUR LE REFERENCEMENT + RÉSEAUX SOCIAUX-------------------->
+    <meta
+      name="description"
+      content="Hey, I'm a frontend developer based in Bruxelles 🇧🇪. I love thinking about good user exepriences and creating web application. Come and see my work 😉"
+    />
+    <meta
+      name="keywords"
+      content="frontend, UX, UI, portfolio, portfolios, Basile, Vanhaverbeke, diplomé, écriture, multimédia, web, designer, developer, manager, project, design, ISFSC, CV, contact, vanha, adobe, trek, in, trek-in, exchange, platform, media, dreamweaver, html, php, css, jquery, javascript, code, illustrator,sql, projet, gestion, bootstrap, drone, premiere, pro, scoutapp"
+    />
+    <meta name="language" content="english" />
+    <!--facebook & linkedin-->
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en" />
+    <meta property="og:title" content="Basile Vanhaverbeke | Portfolio" />
+    <meta property="og:url" content="http://basile-vanhaverbeke.be/" />
+    <meta
+      property="og:description"
+      content="Hey, I'm a frontend developer based in Bruxelles 🇧🇪. I love thinking about good user exepriences and creating web application. Come and see my work 😉"
+    />
+    <link
+      rel="image_src"
+      type="image/jpeg"
+      href="http://basile-vanhaverbeke.be/site-preview.png"
+    />
+    <meta
+      property="og:image"
+      content="http://basile-vanhaverbeke.be/site-preview.png"
+    />
+    <!--twitter-->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:description"
+      content="Hey, I'm a frontend developer based in Bruxelles 🇧🇪. I love thinking about good user exepriences and creating web application. Come and see my work 😉"
+    />
+    <meta name="twitter:title" content="Basile Vanhaverbeke | Portfolio" />
+    <meta
+      name="twitter:image"
+      content="http://basile-vanhaverbeke.be/site-preview.png"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
