add lazy loading on scroll

--- a/public/index.html
+++ b/public/index.html
@@ -45,11 +45,11 @@
     <link
       rel="image_src"
       type="image/jpeg"
-      href="http://basile-vanhaverbeke.be/site-preview.png"
+      href="http://basile-vanhaverbeke.be/portfolio-cover.webp"
     />
     <meta
       property="og:image"
-      content="http://basile-vanhaverbeke.be/site-preview.png"
+      content="http://basile-vanhaverbeke.be/portfolio-cover.webp"
     />
     <!--twitter-->
     <meta name="twitter:card" content="summary_large_image" />
@@ -60,7 +60,7 @@
     <meta name="twitter:title" content="Basile Vanhaverbeke | Portfolio" />
     <meta
       name="twitter:image"
-      content="http://basile-vanhaverbeke.be/site-preview.png"
+      content="http://basile-vanhaverbeke.be/portfolio-cover.webp"
     />
   </head>
   <body>
